--- a/Asm/views/addToy.hbs
+++ b/Asm/views/addToy.hbs
@@ -22,6 +22,7 @@
                Category <input type="text" name="toyCategory" id=""> <br>
                Brand <input type="text" name="toyBrand" id=""> <br>
                Price <input type="text" name="toyPrice" id=""> <br>
+               <label id="lblPriceError" style="color : red">{{toy.errorMsg}}</label> <br>
                 <input type="submit" value="Add">
 
             </form>
